src/objects/Accueil_del__c.object
<CustomObject>
    <fields>
        <fullName>taux_horaire__c</fullName>
        <label>Taux horaire</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>170</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>telephone_maison__c</fullName>
        <inlineHelpText>Utiliser le format
+1.514.770.9389</inlineHelpText>
        <label>Téléphone maison</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>vacances_allouees__c</fullName>
        <description>nombre de jours de vacances</description>
        <inlineHelpText>nombre de jours de vacances</inlineHelpText>
        <label>Vacances allouées</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Formulaire Accueil</label>
    <listViews>
        <fullName>Acceuil_encours</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Prenom__c</columns>
        <columns>Nom__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Processus_complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processus_complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Processus accueil en cours</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Prenom__c</columns>
        <columns>Nom__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Processus_complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processus_complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Tout</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <displayFormat>Accueil-{000}</displayFormat>
        <label>Accueil</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formulaire_Accueil</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>